0.7.0 (to-be-released)

	* http: fixing keep-alive regressions (#52)

0.6.0 (2013-02-27)

	GOAL: running director plugin in productively in multi threaded mode.

	* http: multi threaded mode fixes
	* http: stability fixes
	* http: shutdown process resource cleanup fixes
	* http: improved diagnostic logging
	* http: C++ API improvements
	* http: fixed a bug wrt HTTP message processing in an edge case ignoring the message body
	* http: added support for preventing directory traversal outside document-root.
	* http: fixed document roots that contained trailing slashes
	* director: bug fixes
	* director: JSON API also shows number of dropped requests per load balancer
	* director: should now run properly in threaded mode.
	* director: added director.fcgi() and director.http() handlers to
	deprecate fastcgi and proxy plugins
	* core-api: added Severity level "notice" (syslog-alike).
	* core-api: Buffer now inherits from BufferRef.
	* core-api: Socket API improvements
	* status: added support for nginx-compatible status output, handler status.nginx_compat();
	* config: rewrite() now returns boolean to indicate whether or not rewritten path physically exists or not.
	* config: added systemd.booted() and systemd.controlled() to indicate systemd hypervisoring.
	* package: addeda initial Debian/Ubuntu packaging control files
	* x0d: --log-level= renamed to --log-severity= with from 0 (lowest) to 9 (highest)
	* x0d: --log-severity= also accepts symbolic values and introduced "notice" between "warning" and "info"
	* x0d: added --log-target=file|console|syslog|systemd
	* x0d: fixed PID file writing on process re-execution
	* flow: added log.notice() and log.warn() functions
	* flow: properly handle boolean values as boolean types (not just integer 0 and 1)
	* flow: added support for integer modulo operation
	* flow: added support for casting values of type int/bool/string to string.