@@ -39,6 +39,7 @@ option(WITH_INOTIFY "Build with inotify support [default: on]" ON)
 option(WITH_SSL "Builds with SSL support [default: on]" ON)
 option(WITH_ACCEPT4 "Builds with support for accept4() system-call, if found [default: on]" ON)
 option(WITH_TCP_DEFER_ACCEPT "Builds with support for TCP_DEFER_ACCEPT, if found [default: on]" ON)
+option(WITH_MULTI_ACCEPT "Builds listener acceptor with support for repeative accept() calls  [default: off]" OFF)
 #option(WITH_LIBAIO "Build with libaio support [default: on]" ON)
 
 add_definitions(-Wall -Wno-variadic-macros)
