@@ -31,6 +31,7 @@
 #cmakedefine WITH_SSL
 #cmakedefine WITH_ACCEPT4
 #cmakedefine WITH_TCP_DEFER_ACCEPT
+#cmakedefine WITH_MULTI_ACCEPT
 
 #cmakedefine HAVE_INOTIFY_CREATE1
 #cmakedefine HAVE_FORK
